--- a/lwjgl3/build.gradle
+++ b/lwjgl3/build.gradle
@@ -19,13 +19,13 @@ apply plugin: 'io.github.fourlastor.construo'
 import io.github.fourlastor.construo.Target
 
 sourceSets.main.resources.srcDirs += [ rootProject.file('assets').path ]
-mainClassName = 'com.wxk.starwar.lwjgl3.Lwjgl3Launcher'
+mainClassName = 'com.wxk.starwar.lwjgl3.DesktopLauncher'
 application.setMainClass(mainClassName)
 eclipse.project.name = appName + '-lwjgl3'
-java.sourceCompatibility = 21
-java.targetCompatibility = 21
+java.sourceCompatibility = 17
+java.targetCompatibility = 17
 if (JavaVersion.current().isJava9Compatible()) {
-        compileJava.options.release.set(21)
+        compileJava.options.release.set(17)
 }
 
 dependencies {
